# 2-uzduotis

./: CMakeLists.txt  Failai.cpp  Failai.h  Ivedimas.cpp  Ivedimas.h  README.md  README.txt  Studentas.cpp  Studentas.h  Testai.cpp  Utils.cpp  Utils.h  Zmogus.h  main.cpp
